--- a/style.css
+++ b/style.css
@@ -186,6 +186,7 @@ nav a:hover {
 
 .contact {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 4rem 32rem 4.7rem 32rem;
@@ -193,10 +194,6 @@ nav a:hover {
 }
 
 .contact h2 {
-  /* width: 1440px;
-  height: 253px;
-  left: 1px;
-  top: 2117px;*/
   margin-bottom: 1.5rem;
   font-weight: 700;
   font-size: 1.5rem;
@@ -213,6 +210,7 @@ footer {
   align-items: center;
   padding: 1.5rem 10rem;
   background-color: #222222;
+  cursor: pointer;
 }
 
 footer ul {
