--- a/style.css
+++ b/style.css
@@ -287,6 +287,10 @@ footer a:hover {
   nav .logo {
     display: none;
   }
+  nav,
+  footer {
+    justify-content: center;
+  }
   .hero {
     padding: 0 4rem;
   }
@@ -307,7 +311,7 @@ footer a:hover {
     flex-direction: column;
     align-items: center;
   }
-  .service .text_black {
+  .service {
     text-align: center;
   }
   footer .logo {
